# ML-Interview-Practice

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  config.py  evaluator.py  justfile  main.py  ollama_client.py  profile_manager.py  pyproject.toml  question_generator.py  questions.py  questions_data.json  requirements.txt  session.py  setup.sh
profiles/: template.yaml
profiles/ai-engineer/: profile.json  questions.json
profiles/ml-engineering/: profile.json  questions.json
